--- a/src/components/TopSuppliers/TopSuppliers.module.scss
+++ b/src/components/TopSuppliers/TopSuppliers.module.scss
@@ -14,7 +14,7 @@
 /* Small devices (portrait tablets and large phones, 768px and down) */
 @media only screen and (max-width: 768px) {
     .wrapper {
-        height: 85%;
+        height: 80%;
     }
 }
 
